--- a/.travis.yml
+++ b/.travis.yml
@@ -15,9 +15,9 @@ before_script:
 
 install:
  # Install LLVM 3.8.
- - wget http://llvm.org/pre-releases/3.8.0/rc2/clang+llvm-3.8.0-rc2-x86_64-linux-gnu-ubuntu-14.04.tar.xz
- - tar xf clang+llvm-3.8.0-rc2-x86_64-linux-gnu-ubuntu-14.04.tar.xz
- - export PATH="$PWD/clang+llvm-3.8.0-rc2-x86_64-linux-gnu-ubuntu-14.04/bin:$PATH"
+ - wget https://releases.llvm.org/3.8.0/clang+llvm-3.8.0-x86_64-linux-gnu-ubuntu-14.04.tar.xz
+ - tar xf clang+llvm-3.8.0-x86_64-linux-gnu-ubuntu-14.04.tar.xz
+ - export PATH="$PWD/clang+llvm-3.8.0-x86_64-linux-gnu-ubuntu-14.04/bin:$PATH"
  - cc --version
 
  # llvm-config gives compiler arguments for the compiler it was
@@ -25,7 +25,7 @@ install:
  # 'unrecognized command line option ‘-Wcovered-switch-default’'
  - which cc
  - sudo rm `which cc`
- - sudo ln -s $PWD/clang+llvm-3.8.0-rc2-x86_64-linux-gnu-ubuntu-14.04/bin/clang /usr/bin/cc
+ - sudo ln -s $PWD/clang+llvm-3.8.0-x86_64-linux-gnu-ubuntu-14.04/bin/clang /usr/bin/cc
  - cc --version
  - llvm-config --version
 
